Separation of CSS/HTML per widget Each widget has his metadata in a json file

--- a/tests/reuters/reuters.html
+++ b/tests/reuters/reuters.html
@@ -3,64 +3,9 @@
 <head>
   <title>AJAX Solr</title>
    <link rel="stylesheet" type="text/css" href="../../include.php?id=reuters&type=css" media="screen" />
-<!--  <link rel="stylesheet" type="text/css" href="ext/jquery.autocomplete.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="ext/smoothness/jquery-ui.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="ext/smoothness/ui.theme.css" media="screen" />
- -->
-  <script type="text/javascript" src="../../include.php?id=reuters&type=js"></script>
-<!-- 
-
-
-  <script type="text/javascript" src="js/reuters.theme.js"></script>
-  <script type="text/javascript" src="js/reuters.js"></script>
--->
+  <script type="text/javascript" src="../../include.php?id=reuters&target=here&type=js"></script>
 </head>
 <body>
-  <div id="wrap"> 
-    <div id="header">
-      <h1>AJAX Solr Demonstration</h1>
-      <h2>Browse Reuters business news from 1987</h2>
-    </div>
-
-    <div class="right">
-      <div id="result">
-        <div id="navigation">
-          <ul id="pager"></ul>
-          <div id="pager-header"></div>
-        </div>
-        <div id="docs"></div>
-      </div>
-    </div>
-
-    <div class="left">
-      <h2>Current Selection</h2>
-      <ul id="selection"></ul>
-
-      <h2>Search</h2>
-      <span id="search_help">(press ESC to close suggestions)</span>
-      <ul id="search">
-        <input type="text" id="query" name="query"/>
-      </ul>
-
-      <h2>Top Topics</h2>
-      <div class="tagcloud" id="topics"></div>
-
-      <h2>Top Organisations</h2>
-      <div class="tagcloud" id="organisations"></div>
-
-      <h2>Top Exchanges</h2>
-      <div class="tagcloud" id="exchanges"></div>
-
-      <h2>By Country</h2>
-      <div id="countries"></div>
-      <div id="preview"></div>
-
-      <h2>By Date</h2>
-      <div id="calendar"></div>
-
-      <div class="clear"></div>
-    </div>
-    <div class="clear"></div>
-  </div>  
+	<div id="here"></div>
 </body>
 </html>
