reuters test working with using the requester widget pinv example with current search and autocomplete widgets

--- a/tests/reuters/reuters.html
+++ b/tests/reuters/reuters.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>AJAX Solr</title>
-   <link rel="stylesheet" type="text/css" href="../../include.php?id=reuters&type=css" media="screen" />
-  <script type="text/javascript" src="../../include.php?id=reuters&target=here&type=js"></script>
-</head>
-<body>
-	<div id="here"></div>
-</body>
+	<head>
+		<title>AJAX Solr</title>
+		<link rel="stylesheet" type="text/css"
+			href="../../include.php?id=reuters&type=css" media="screen" />
+		<script type="text/javascript"
+			src="../../include.php?id=reuters&target=here&type=js"></script>
+	</head>
+	<body>
+		<div id="here"></div>
+	</body>
 </html>
