--- a/widgets/AutocompleteWidget/AutocompleteWidget.html
+++ b/widgets/AutocompleteWidget/AutocompleteWidget.html
@@ -1,5 +1,4 @@
+	<div id="{id}">
       <h2>{title}</h2>
-      <span id="search_help">{subtitle}</span>
-      <ul id="{id}">
-        <input type="text" id="query" name="query" />
-      </ul>
+      <span id="search_help">{subtitle}</span><br />
+	</div>
