--- a/widgets/PagerWidget/PagerWidget.html
+++ b/widgets/PagerWidget/PagerWidget.html
@@ -1,4 +1,4 @@
-        <div id="navigation">
-          <ul id="pager"></ul>
-          <div id="pager-header"></div>
+        <div id="{id}">
+          <ul id="{pager_id}"></ul>
+          <div id="{pager_header_id}"></div>
         </div>
