First part for generic features in the dataset: GraphWidget

--- a/widgets/InvertedTabsWidget/InvertedTabsWidget.html
+++ b/widgets/InvertedTabsWidget/InvertedTabsWidget.html
@@ -1,9 +1,3 @@
-<div class="invertedshiftdown" id="{id}">
-	<ul>
-		
-		<li class="current"><a title="Circle">Circle</a></li>
-		<li><a title="Table">Table</a></li>
-	</ul>
-</div>
+<div class="invertedshiftdown" id="{id}"></div>
 
 <br style="clear: both;" />
