--- a/pinv.html
+++ b/pinv.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 	<head>
 		<title>PINV - Protein Interaction Network Visualizer</title>
-		<link rel="stylesheet" type="text/css" href="include.php?id=pinvIndex&type=css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="pinvIndex.css" media="screen" />
-		<script type="text/javascript" src="include.php?id=pinvIndex&target=here&type=js"></script>
+		<link rel="stylesheet" type="text/css" href="biosual/include.php?id=pinvIndex&type=css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="biosual/pinvIndex.css" media="screen" />
+		<script type="text/javascript" src="biosual/include.php?id=pinvIndex&target=here&type=js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Jura' rel='stylesheet' type='text/css' />
 	</head>
 	<body>
 		<div id="here"></div>
-		<footer><img src="images/ichrome.png" width="16px" />Works better with Google Chrome.</footer>
+		<footer><img src="biosual/images/ichrome.png" width="16px" />Works better with Google Chrome.</footer>
 	</body>
 </html>
