--- a/pinvTester.html
+++ b/pinvTester.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>PINV - Biosual Architecture</title>
-		<link rel="stylesheet" type="text/css" href="include.php?id=pinvNew&type=css&test=true" media="screen" />
-		<link rel="stylesheet" type="text/css" href="pinv.css" media="screen" />
-		<script type="text/javascript" src="include.php?id=pinvNew&target=here&type=js&test=true"></script>
+		<link rel="stylesheet" type="text/css" href="biosual/include.php?id=pinvNew&type=css&test=true" media="screen" />
+		<link rel="stylesheet" type="text/css" href="biosual/pinv.css" media="screen" />
+		<script type="text/javascript" src="biosual/include.php?id=pinvNew&target=here&type=js&test=true"></script>
 		<link href='http://fonts.googleapis.com/css?family=Jura' rel='stylesheet' type='text/css' />
 	</head>
 	<body>
