All the reported bugs in github up to #38 and some of the enhancement that are necessary

--- a/pinViewer.html
+++ b/pinViewer.html
@@ -9,5 +9,10 @@
 	</head>
 	<body>
 		<div id="here"></div>
+		<br class="clearBoth">
+		<footer>
+			Please report a bug <a href="https://groups.google.com/group/pinv_biosual" target="_new">HERE<img src="biosual/images/bug.png" width="16px"></a>
+			<br/>Works better with Google Chrome.<img src="biosual/images/ichrome.png" width="16px" />
+		</footer>
 	</body>
 </html>
