New Feature: Filters The queries can now contain a filter using the solr value fq. The filter can be defined on a dialog that uses the ruler component.

--- a/widgets/NetworkLoader/NetworkLoader.html
+++ b/widgets/NetworkLoader/NetworkLoader.html
@@ -5,7 +5,7 @@
 								<ul>
 									<li id="coreName" class="textField2Validate">
 										<span class="label">Data Set Name: </span> 
-										<input type="text" class="textField2Validate" name="network_name" /><br /> 
+										<input type="text" class="textField2Validate" name="network_name" />
 										<output class="coreValidation"></output>
 									</li>
 									<li id="interactionsLoader"></li>
