Hiding the provenance list, and creating a button to make it visible Solving issues when sharing something with a * because of a jquery escape selector solving a bug related with loading statuses when fixed proteins were included

--- a/widgets/ProvenanceWidget/ProvenanceWidget.html
+++ b/widgets/ProvenanceWidget/ProvenanceWidget.html
@@ -1,5 +1,8 @@
-	<div id="{id}" class="provenance">
-      <header>{title}</header>
-      <section class="provenance_list">
-      </section>
+	<div id="{id}">
+		<a class="provenance_button">Show History</a>
+		<div class="provenance">
+	      <header>{title}</header>
+	      <section class="provenance_list">
+	      </section>
+		</div>
 	</div>
