Adding fields to the dataset submission form:  - email  - option public/private

--- a/widgets/NetworkLoader/NetworkLoader.html
+++ b/widgets/NetworkLoader/NetworkLoader.html
@@ -8,6 +8,19 @@
 										<input type="text" class="textField2Validate" name="network_name" />
 										<output class="coreValidation"></output>
 									</li>
+									<li id="email" class="emailTF">
+										<span class="label">Email: </span> 
+										<input type="text" class="email2Validate" name="email" />
+										<output class="emailValidation"></output>
+									</li>
+									<li class="privacy">
+										<div class="privacy2">
+											<input type="radio" id="radio1" name="type" value="public"><label for="radio1">Public</label>
+											<input type="radio" id="radio2" name="type"value="private"><label for="radio2">Private</label>
+											<br/>
+											<output class="typeMessage"></output>
+										</div>
+									</li>
 									<li id="interactionsLoader"></li>
 									<li id="featuresLoader"></li>
 								</ul>
