- Adding an error message in case the dataset is protected - displaying the total of proteins per dataset in the prefilters window - Correcting the link from an embedded iframe to PINV - The validation of the email on the uploading form is now triggered when selecting an option from autocomplete

--- a/widgets/NetworkLoader/NetworkLoader.html
+++ b/widgets/NetworkLoader/NetworkLoader.html
@@ -16,7 +16,7 @@
 									<li class="privacy">
 										<div class="privacy2">
 											<input type="radio" id="radio1" name="type" value="public"><label for="radio1">Public</label>
-											<input type="radio" id="radio2" name="type"value="private"><label for="radio2">Private</label>
+											<input type="radio" id="radio2" name="type"value="private"><label for="radio2">Protected</label>
 											<br/>
 											<output class="typeMessage"></output>
 										</div>
