--- a/widgets/QueryFilterWidget/QueryFilterWidget.html
+++ b/widgets/QueryFilterWidget/QueryFilterWidget.html
@@ -3,6 +3,7 @@
   <div id="filter_mask" class="filter_mask"></div>
   <div id="filter_container" class="filter_container">
   	<header><a id="filter_close">X</a></header>
+  	<section class="explain_close">You can close this window by clicking on the close button up here!</section>
   	<div class="filter_div" >
 		<header>Filters</header> 
 		<div id="filter_ruler"></div>
@@ -10,8 +11,9 @@
 			<div class="filter_stats_chart" ></div>
 			<div class="filter_stats_text">
 				<table>
-					<tr><th>Total Interactions: </th><td class="filter_total"></td></tr>
-					<tr><th>All filters:</th><td class="filter_filtered"></td></tr>
+					<tr><th>Proteins in data set: </th><td class="filter_total_proteins">...</td></tr>
+					<tr><th>Interactions in data set: </th><td class="filter_total"></td></tr>
+					<tr><th>Applying all filters:</th><td class="filter_filtered"></td></tr>
 					<tr><th>Filter Contribution:</th><td>
 						<table style="font-size:0.7em;" class="filter_contributions">
 						</table>
