Heatmap widget added with alll the functionalities of PINV!

--- a/about.html
+++ b/about.html
@@ -45,5 +45,6 @@
 			<li><a href="http://www.ebi.ac.uk/Tools/biojs/registry/Biojs.ExpressionLoader.html" target="_new">Expression Loader</a> </li>
 			<li><a href="http://www.ebi.ac.uk/Tools/biojs/registry/Biojs.Ruler.html" target="_new">Ruler</a> </li>
 		</ul>
+		<p style="text-align:center; color:#444; font-size: 12px;" >Designed &amp; Developed at<br/><img alt="CBIO" src="images/cbio.png" width="150px"></p>
 	</body>
 </html>
