--- a/pinViewer.html
+++ b/pinViewer.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE>
+<html>
 	<head>
 		<title>PINV - Biosual Architecture</title>
 		<link rel="stylesheet" type="text/css" href="biosual/include.php?id=pinvNew&type=css" media="screen" />
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id="here"></div>
-		<br class="clearBoth">
+		<br class="clearBoth" />
 		<footer>
 			Please report a bug <a href="https://groups.google.com/group/pinv_biosual" target="_new">HERE<img src="biosual/images/bug.png" width="16px"></a>
 			<br/>Works better with Google Chrome.<img src="biosual/images/ichrome.png" width="16px" />
