--- a/pinv.html
+++ b/pinv.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<div id="here"></div>
+		<p style="text-align:center; color:#444; font-size: 12px;" >Designed &amp; Developed at<br/><img alt="CBIO" src="images/cbio.png" width="150px"></p>
 		<footer><img src="biosual/images/ichrome.png" width="16px" />Works better with Google Chrome.</footer>
 	</body>
 </html>
