Adding sorting capabilities to the Circle layout

--- a/pinViewer.html
+++ b/pinViewer.html
@@ -1,6 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>PINV - Biosual Architecture</title>
 		<link rel="stylesheet" type="text/css" href="biosual/include.php?id=pinvNew&type=css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="biosual/pinv.css" media="screen" />
