Documentation changes bug fixing

--- a/about.html
+++ b/about.html
@@ -18,13 +18,20 @@
 		<h1>Protein Interaction Network Visualizer</h1>
 		<p>Here you will find more information about PINV</p>
 		
+		<h2>Cite us:</h2>
+		<p><a href="http://www.biomedcentral.com/1471-2105/15/129">A web-based protein interaction network visualizer</a> <br/>Salazar G. A., Meintjes A., Mazandu G. K., Rapanoel H. A., Akinola R. O. and Mulder N. J. <br>BMC Bioinformatics 2014, 15:129  doi:10.1186/1471-2105-15-129
+
+		</p>
 		<h2>Tutorials</h2>
 		<ul>
+			<li><a href="https://github.com/4ndr01d3/pinv-server/tree/master/data-preparation">Updating your dataset</a> (Oct 2014)</li>
 			<li><a href="https://docs.google.com/document/d/1qgTes3j0sRFtnmAjwHmUadqSK2r_iqnGztibsl6IIQQ/pub">Short Tutorial</a> (Sep 2013)</li>
 		</ul>
 
 		<h2>Slides from Talks</h2>
 		<ul>
+			<li><a href="http://training.h3abionet.org/embo_workshop_2014/?page_id=73" target="_new">PPI EMBO Course 2014</a> (Oct 2013)</li>
+			<li><a href="http://prezi.com/hz12yawn-ifw/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_new">SASBI Conference</a> (Sep 2014)</li>
 			<li><a href="http://prezi.com/m4tjbdgacdrw/?utm_campaign=share&utm_medium=copy" target="_new">CBIO Seminar</a> (Sep 2013)</li>
 		</ul>
 		
