--- a/widgets/NetworkLoader/NetworkLoader.html
+++ b/widgets/NetworkLoader/NetworkLoader.html
@@ -1,6 +1,8 @@
 						
 						<div id="{id}" class="networkLoader">
+						
 							<header></header>
+							<p> You can see some information about how to prepare your data in this <a href="https://github.com/4ndr01d3/pinv-server/tree/master/data-preparation">git example repository</a> </p>
 							<form action="{formTarget}" method="POST" enctype="multipart/form-data">
 								<ul>
 									<li id="coreName" class="textField2Validate">
