The client now supports the information of clusters coming form the server. each cluster can be explode with double click.

--- a/widgets/QuickStartWidget/QuickStartWidget.html
+++ b/widgets/QuickStartWidget/QuickStartWidget.html
@@ -11,9 +11,8 @@
 				<section class="explain">You can include proteins in your network listing their IDs in the textarea at the top-right of the screen</section></div>
 		<div>	<button class="filter"><img src="biosual/widgets/QuickStartWidget/filter.png"><br>Filter the Network</button>
 				<section class="explain">Create filters to include only what you really want</section></div>
-<!--  		<div>	<button class="cluster" disabled><img src="biosual/widgets/QuickStartWidget/cluster.png"><br>Clustering</button>
-				<section class="explain"><b>Coming soon!</b><br> High level view of the network clustering by location.</section></div>
--->
+  		<div>	<button class="cluster"><img src="biosual/widgets/QuickStartWidget/cluster.png"><br>Clustering</button>
+				<section class="explain">High level view of the network clustered by location after simulationg a force-directed algorithm.</section></div>
 	</div>
   </div>
 </div>
